# future

./: .gitignore  404.html  CHANGELOG.md  Future-fix.md  LICENSE  Makefile  README.md  TODO.md  debug.ipynb  example.py  index.html  mkdocs.yml  pyproject.toml  resp.md  search.html  sitemap.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  decorator-check.yml  docs.yml  publish.yml  test-suite.yml
boilerplate/: .env.example  .gitignore  README.md  pyproject.toml  run.py
boilerplate/app/: routes.py
boilerplate/app/config/: database.py  environment.py  middleware.py
boilerplate/app/controllers/: ExampleController.py
boilerplate/app/middleware/: ExampleMiddleware.py
boilerplate/app/models/: ExampleModel.py
boilerplate/app/plugins/: ExamplePlugin.py
cli/: index.html
configuration/: index.html
controllers/: index.html
database/: index.html
docker/: index.html
docs/: cli.md  configuration.md  controllers.md  database.md  docker.md  examples.md  gaps.md  getting-started.md  http.md  index.md  installation.md  lifespan-tasks.md  lifespan.md  middleware.md  models.md  openapi.md  quick-reference.md  quick-start.md  request.md  response.md  routing.md  tasks.md  usage.md  websockets.md
examples/: index.html
future/: __init__.py  application.py  authentication.py  cli.py  controller.py  controllers.py  database.py  exceptions.py  lifespan.py  logger.py  middleware.py  models.py  openapi.py  plugins.py  request.py  requests.py  response.py  responses.py  routing.py  scheduler.py  settings.py  testclient.py  types.py  utils.py
future/authentication/: Auth0Authentication.py  Authentication.py  AzureADAuthentication.py  BasicAuthentication.py  KerberosAuthentication.py  KeycloakAuthentication.py  OAuth2Authentication.py  OpenIdConnectAuthentication.py  SAMLAuthentication.py
future/cli/: __init__.py  main.py  stubs.py
future/controllers/: __init__.py  base.py  builtins.py  graphql.py  openapi.py
future/databases/: Clickhouse.py  Connections.py  Database.py  Elasticsearch.py  MongoDB.py  MySQL.py  Postgres.py  Redis.py  SQLite.py
future/graphql/: __init__.py  schema.py
future/middleware/: Middleware.py  SessionMiddleware.py  __init__.py
future/migrations/: Blueprint.py  Column.py  Migration.py  MigrationGenerator.py  Migrator.py  Schema.py
future/models/: __init__.py  model.py
future/plugins/: ElasticsearchPlugin.py
future/seeds/: SeedGenerator.py  SeedRunner.py  Seeder.py
future/tasks/: __init__.py  scheduler.py
future/testing/: __init__.py  client.py
gaps/: index.html
getting-started/: index.html
http/: index.html
installation/: index.html
lifespan/: index.html
lifespan-tasks/: index.html
middleware/: index.html
models/: index.html
openapi/: index.html
performance/: OPTIMIZATION_GUIDE.md  __init__.py  benchmark.py  build_cython_router.py  build_fast_router.py  example_cython_router.py  example_fast_router.py  example_no_logging.py  example_optimized.py  fast_router.py  fast_router.pyx  fast_router_cy.c  fast_router_cy.pyx  fastapi_app.py  flask_app.py  optimized_application.py  sanic_app.py  setup_fast.py
quick-reference/: index.html
quick-start/: index.html
request/: index.html
response/: index.html
routing/: index.html
search/: search_index.json
tasks/: index.html
tests/: test_app.py  test_application.py  test_elasticsearch_db.py  test_gaps_closure.py  test_graphql.py  test_http_extras.py  test_medium_gaps.py  test_middleware.py  test_models.py  test_mysql_db.py  test_mysql_live.py  test_postgres_db.py  test_postgres_live.py  test_requests.py  test_routing.py  test_sqlite.py  test_websocket.py
websockets/: index.html
