[tool.poetry]
name = "future"
version = "1.1.0"
description = "Next Gen. ASGI Framework for minimal Web APIs"
authors = ["nicolaipre"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.51.0"
httpx = "^0.28.1"
rich = "^15.0.0"
elasticsearch = "^9.4.0"
strawberry-graphql = "^0.323.0"
python-dotenv = "^1.2.2"
sqlalchemy = "^2.0.51"
inflection = "^0.5.1"
pymysql = "^1.2.0"
pymongo = "^4.17.0"
psycopg2-binary = "^2.9.12"
clickhouse-driver = "^0.2.11"
redis = "^8.0.0"
faker = "^40.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
coverage = "^7.15.0"
ruff = "^0.15.0"
mypy = "^2.3.0"
types-psutil = "^7.2.0"
types-requests = "^2.32.0"
build = "^1.5.0"
twine = "^6.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Match Future / Cursor coding style: keep long single-line defs; do not wrap for width.
line-length = 256
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
# No "I" (isort) — do not re-order imports. No format step in CI — do not multiline long defs.
select = [
    "E",
    "F",
    "W",
    "B",
]
ignore = [
    "E501",  # long lines are intentional (one-line function defs)
    "E261",  # inline comment spacing
    "E266",  # multiple ##
    "E302",  # blank lines between functions
    "E303",  # blank lines inside blocks
    "E402",  # imports not at top
    "E731",  # lambda assignments
    "W291",  # trailing whitespace (noisy vs existing style)
    "W293",  # blank line whitespace
    "B008",  # function calls in defaults
    "B007",  # unused loop variable
    "B009",  # getattr(x, "literal") — used intentionally on models
    "B904",  # raise without from
    "F541",  # f-string without placeholders
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-exports
"tests/**" = ["B011", "F401"]

[tool.ruff.format]
# Available for local use only — CI must NOT run `ruff format` (would wrap/multiline).
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true
docstring-code-format = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
pretty = true
# Gradual typing; Model.__table__ overrides and similar are normal in this codebase.
disable_error_code = ["misc", "var-annotated", "assignment", "arg-type", "import-untyped"]
exclude = ["(?x)(build/|dist/|\\.venv/)"]

[tool.poetry.scripts]
future = "future.cli:main"
